# swagger.yml
@@ -346,6 +346,56 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/JobStart'
+
+  /ipfs:
+    post:
+      summary: "Save an object to IPFS"
+      description: "Save an object to IPFS"
+      operationId: "ipfsSave"
+      security:
+      - apiKeyAuth: []
+      tags:
+        - IPFS
+      requestBody:
+        description: "Payload"
+        required: true
+        content:
+          text/plain:
+            schema:
+              type: string
+      responses:
+        400:
+          description: "Invalid input"
+        200:
+          description: Hash Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IpfsResponse'
+  /ipfs/{hash}:
+    get:
+      summary: "Get an object from IPFS"
+      description: "Get an object from IPFS"
+      operationId: "ipfsGet"
+      security:
+      - apiKeyAuth: []
+      tags:
+        - IPFS
+      parameters:
+       - in: path
+         name: hash   
+         required: true
+         schema:
+           type: string
+           description: IPFS Hash to retrieve
+      responses:
+        400:
+          description: "Invalid input"
+        200:
+          description: Hash Created
+          content:
+            text/plain:
+              type: string
 components:
   securitySchemes:
     bearerAuth:
@@ -601,6 +651,11 @@ components:
           type: "array"
           items:
             type: "string"
+    IpfsResponse:
+      type: object
+      properties:
+        hash:
+          type: string
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
